All_Component_DX/force-app/main/default/objects/Picklist_Cache__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Field</label>
    <referenceTo>Field_Cache__c</referenceTo>
    <relationshipLabel>Picklist Cache (Source Field)</relationshipLabel>
    <relationshipName>Picklist_Cache</relationshipName>
    <type>Lookup</type>
</CustomField>