All_Component_DX/force-app/main/default/objects/Picklist_Cache__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Field</label>
    <referenceTo>Field_Cache__c</referenceTo>
    <relationshipLabel>Picklist Cache (Target Field)</relationshipLabel>
    <relationshipName>Picklist_Cache1</relationshipName>
    <type>Lookup</type>
</CustomField>