All_Component_DX/force-app/main/default/objects/Picklist_Cache__c/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <formula>Target_Field__r.Field_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Field API Name</label>
    <type>Text</type>
</CustomField>