All_Component_DX/force-app/main/default/objects/Picklist_Cache__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <label>Target Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>